addresses #1263: APPLY button no longer stretches along minor axis

--- a/scss/components/_admin_list.scss
+++ b/scss/components/_admin_list.scss
@@ -9,6 +9,7 @@
     margin-top: $grid-gutter-width/2;
 }
 .controls__bulk-actions { // was: .bulk-controls; wraps bulk action controls
+    align-items: flex-start;
     display: flex;
     flex-grow: 1;
 }
